force-app/main/default/objects/Artist__c/Artist__c.object-meta.xml
<CustomObject>
    <description>The object that stores all Artist information</description>
    <label>Artist</label>
    <nameField>
        <label>Artist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>