force-app/main/default/objects/Artist__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The default agent for this artist</inlineHelpText>
    <label>Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Artists</relationshipLabel>
    <relationshipName>Artists</relationshipName>
    <type>Lookup</type>
</CustomField>