force-app/main/default/objects/Artist__c/fields/Artist_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Artist_Image_URL__c</fullName>
    <inlineHelpText>URL where the static resource of the Artist image is stored</inlineHelpText>
    <label>Artist Image URL</label>
    <type>Url</type>
</CustomField>