force-app/main/default/objects/Artist__c/fields/Charges_VAT__c.field-meta.xml
<CustomField>
    <fullName>Charges_VAT__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This is unchecked if the Artist does not charge VAT. Quotes for this Artist will not include VAT and Booking Forms for this Artist will be defaulted to Non-VAT on creation</inlineHelpText>
    <label>Charges VAT</label>
    <type>Checkbox</type>
</CustomField>