force-app/main/default/objects/Artist__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <defaultValue>$Setup.VocalEventsSettings__c.Commission__c</defaultValue>
    <description>The percentage commission this artist pays Vocal Events</description>
    <label>Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>