force-app/main/default/objects/Artist__c/fields/Commission_Before_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Commission_Before_Expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this Artist pays commission on the Full Performance fee, and not Performance less Expenses</inlineHelpText>
    <label>Commission Before Expenses</label>
    <type>Checkbox</type>
</CustomField>