force-app/main/default/objects/Artist__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>The Artists primary contact number</description>
    <label>Contact Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>