force-app/main/default/objects/Artist__c/fields/Google_Calendar_Failing_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Failing_Bookings__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Count of this artist&apos;s Booking Forms currently failing to sync to Google Calendar. Maintained automatically by the sync; do not edit manually.</description>
    <label>Google Calendar Failing Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>