force-app/main/default/objects/Artist__c/fields/Google_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Id__c</fullName>
    <description
  >The Google Calendar this artist&apos;s bookings are synced to (the Gmail address of the calendar Vocal Events manages for them). Kept separate from Email__c so a change to the artist&apos;s contact email can&apos;t silently break calendar sync.</description>
    <label>Google Calendar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>