force-app/main/default/objects/Artist__c/fields/Google_Calendar_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Last_Synced__c</fullName>
    <description
  >The last time a Booking Form for this artist was successfully synced to their Google Calendar. Set automatically by the sync.</description>
    <label>Google Calendar Last Synced</label>
    <type>DateTime</type>
</CustomField>