force-app/main/default/objects/Artist__c/fields/Google_Calendar_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Named_Credential__c</fullName>
    <description
  >The API name of this artist&apos;s Google Calendar Named Credential (e.g. GoogleCal_RicusNel_NamedCred), used by the sync to build the callout endpoint for their calendar. Blank means this artist&apos;s calendar isn&apos;t connected yet.</description>
    <label>Google Calendar Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>