force-app/main/default/objects/Artist__c/fields/Google_Calendar_Status__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Status__c</fullName>
    <description
  >At-a-glance Google Calendar sync status for this artist, used on the sync dashboard.</description>
    <formula>IF(ISBLANK(Google_Calendar_Id__c), &quot;Not Configured&quot;,
IF(ISNULL(Google_Calendar_Last_Synced__c), &quot;Never Synced&quot;,
IF(Google_Calendar_Failing_Bookings__c &gt; 0, &quot;Sync Failing&quot;,
&quot;Connected&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Calendar Status</label>
    <type>Text</type>
</CustomField>