force-app/main/default/objects/Artist__c/fields/Has_special_fee__c.field-meta.xml
<CustomField>
    <fullName>Has_special_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Artist has a discounted rate for performances during the week</inlineHelpText>
    <label>Has special fee</label>
    <type>Checkbox</type>
</CustomField>