force-app/main/default/objects/Artist__c/fields/Home_Town__c.field-meta.xml
<CustomField>
    <fullName>Home_Town__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Town where the Artist lives, and will generally be travelling from</description>
    <label>Home Town</label>
    <referenceTo>Town__c</referenceTo>
    <relationshipLabel>Artists</relationshipLabel>
    <relationshipName>Artists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>