force-app/main/default/objects/Artist__c/fields/Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select or create a valid Invoice Account</errorMessage>
        <filterItems>
            <field>Account.Can_send_Quotes_and_Invoices__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Artists</relationshipLabel>
    <relationshipName>Artists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>