force-app/main/default/objects/Artist__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <inlineHelpText>Determines if the Artist&apos;s monthly breakdown is an Invoice or a Statement (ie, Vocal Events invoices Artist - Invoice, or Artist invoices Vocal Events - Statement)</inlineHelpText>
    <label>Default Breakdown Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Statement</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>