force-app/main/default/objects/Artist__c/fields/Invoiced_from_Vocal_Events__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_from_Vocal_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Artist does not send their own Invoices, Vocal Events Invoices on their behalf</inlineHelpText>
    <label>Invoiced from Vocal Events</label>
    <type>Checkbox</type>
</CustomField>