force-app/main/default/objects/Artist__c/fields/Is_Sports_Client__c.field-meta.xml
<CustomField>
    <fullName>Is_Sports_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is checked if the artists is a Sports Personality</inlineHelpText>
    <label>Is Sports Client</label>
    <type>Checkbox</type>
</CustomField>