force-app/main/default/objects/Artist__c/fields/Links_to_Images__c.field-meta.xml
<CustomField>
    <fullName>Links_to_Images__c</fullName>
    <description>Links to promotional images of the artist</description>
    <label>Links to Images</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>