force-app/main/default/objects/Artist__c/fields/Links_to_Tech_Riders__c.field-meta.xml
<CustomField>
    <fullName>Links_to_Tech_Riders__c</fullName>
    <inlineHelpText>Add the public links to the Artist Solo Tech riders here</inlineHelpText>
    <label>Links to Tech Riders (Solo)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>