force-app/main/default/objects/Artist__c/fields/Links_to_Tech_Riders_Band__c.field-meta.xml
<CustomField>
    <fullName>Links_to_Tech_Riders_Band__c</fullName>
    <inlineHelpText>Add the links to the Artist&apos;s Band Technical Rider Here</inlineHelpText>
    <label>Links to Tech Riders (Band)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>