force-app/main/default/objects/Artist__c/fields/Links_to_Videos__c.field-meta.xml
<CustomField>
    <fullName>Links_to_Videos__c</fullName>
    <description>Links to promotional videos of the artist</description>
    <label>Links to Videos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>