force-app/main/default/objects/Artist__c/fields/Record_Company__c.field-meta.xml
<CustomField>
    <fullName>Record_Company__c</fullName>
    <inlineHelpText>The Record Company this artist pays a commission to</inlineHelpText>
    <label>Record Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Record_Companies</valueSetName>
    </valueSet>
</CustomField>