force-app/main/default/objects/Artist__c/fields/Record_Company_Commission__c.field-meta.xml
<CustomField>
    <fullName>Record_Company_Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The Amount of commission paid to the Artist&apos;s record company each month</inlineHelpText>
    <label>Record Company Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>