force-app/main/default/objects/Artist__c/fields/Technical_is_invoiced_separately__c.field-meta.xml
<CustomField>
    <fullName>Technical_is_invoiced_separately__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Technical fees are not included in the Artist&apos;s invoice</inlineHelpText>
    <label>Technical is invoiced separately</label>
    <type>Checkbox</type>
</CustomField>