force-app/main/default/objects/Artist__c/fields/Travel_Fee__c.field-meta.xml
<CustomField>
    <fullName>Travel_Fee__c</fullName>
    <defaultValue>$Setup.VocalEventsSettings__c.Travel_Fee_Per_Km__c</defaultValue>
    <description>The amount the Artist charges for Travel per Km</description>
    <label>Travel Fee (Per Km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>