force-app/main/default/objects/Artist__c/fields/Travels_Alone__c.field-meta.xml
<CustomField>
    <fullName>Travels_Alone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Artist supplies Sound, the Artist travels separate from the Technical Crew</inlineHelpText>
    <label>Travels Alone</label>
    <type>Checkbox</type>
</CustomField>