force-app/main/default/objects/Artist__c/recordTypes/Solo_or_Band_Artist.recordType-meta.xml
<RecordType>
    <fullName>Solo_or_Band_Artist</fullName>
    <active>true</active>
    <description>This Artist performs solo or with a band</description>
    <label>Solo or Band Artist</label>
</RecordType>