force-app/main/default/objects/Artist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Home_Town__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Artists</label>
</ListView>